add link and improve usability

--- a/src/options.html
+++ b/src/options.html
@@ -32,12 +32,13 @@
         </h1>
       </header>
       <div class="control">
-        <button id="js-add-template-button" class="control__button">add template</button>
+        <button id="js-add-template-button" class="control__button control__add-template">add template</button>
         <button id="js-save-templates-button" class="control__button">save templates</button>
         <button id="js-reset-templates-button" class="control__button">reset templates</button>
       </div>
       <details class="playground">
         <summary class="playground__summary">playground</summary>
+        <a class="playground__link" href="https://github.com/janl/mustache.js#templates">see mustache template references</a>
         <div class="playground__content">
           <label class="playground__label">
             template<br />
