add toast for save

--- a/src/options.html
+++ b/src/options.html
@@ -52,5 +52,6 @@
       </details>
       <ul id="js-template-list" class="template-list"></ul>
     </main>
+    <div id="js-toast-save" class="toast-save">saved!</div>
   </body>
 </html>
