--- a/src/options.html
+++ b/src/options.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>self catering options</title>
+    <title>options - self catering</title>
     <link rel="stylesheet" href="options.css">
     <script id="js-template-item-form" type="text/plain">
       <li class="template-item item">
